--- a/src/app/components/landpage/header/css/styles.module.css
+++ b/src/app/components/landpage/header/css/styles.module.css
@@ -1,6 +1,50 @@
-
 .container {
     width: 100%;
-    height: 10vh;
-    
+    height: auto;
+    background-color: var(--primary);
+    position: fixed;
+}
+
+.wrapper {
+    width: var(--max-width);
+    margin: 10px auto;
+}
+
+.logo {
+    width: 50%;
+    height: 100%;
+}
+
+.image1 {
+    margin: 0 0 0 30px;
+}
+.image2{
+    margin: 0 0 0 20px;
+}
+
+.image1,
+.image2 {
+    border-radius: 50%;
+}
+
+.buttons {
+    width: 50%;
+    height: 100%;
+}
+
+.buttons button {
+    margin: 0 30px;
+    width: 80px;
+    height: 35px;
+    background: transparent;
+    border: 2px solid var(--foreground);
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 500ms ease-in-out;
+}
+
+.buttons button:hover {
+    background-color: var(--foreground);
+    color: var(--background);
 }
