--- a/src/app/config/conf/config.css
+++ b/src/app/config/conf/config.css
@@ -1,11 +1,16 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: #ffffff;
+	--foreground: #171717;
+	--primary: #0070F3;
+	--secondary: #1CA9C9;
+
+	/* Global Wrapper Width */
+	--max-width: min(100%, 1200px);
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	:root {
+		--background: #0a0a0a;
+		--foreground: #ededed;
+	}
 }
