--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,51 @@
 
 @import url("./config/conf/config.css");
 
+.display_flex_center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.display_flex_right {
+	display: flex;
+	justify-content: right;
+	align-items: center;
+}
+
+.display_flex_left {
+	display: flex;
+	justify-content: left;
+	align-items: center;
+}
+
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+	max-width: 100vw;
+	overflow-x: hidden;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	color: var(--foreground);
+	background: var(--background);
+	font-family: Arial, Helvetica, sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+	html {
+		color-scheme: dark;
+	}
 }
