--- a/src/app/config/conf/config.css
+++ b/src/app/config/conf/config.css
@@ -8,9 +8,9 @@
 	--max-width: min(100%, 1200px);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
 	:root {
 		--background: #0a0a0a;
 		--foreground: #ededed;
 	}
-}
+} */
