--- a/src/app/config/conf/config.css
+++ b/src/app/config/conf/config.css
@@ -1,8 +1,11 @@
 :root {
-	--background: #ffffff;
+	--background: #1CA9C9;
 	--foreground: #171717;
 	--primary: #0070F3;
 	--secondary: #1CA9C9;
+	/* Alternative Colors */
+	--default-color-white: #e9e9e9;
+	--default-color-black: #171717;
 
 	/* Global Wrapper Width */
 	--max-width: min(100%, 1200px);
