--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@ body {
 }
 
 body {
-	color: var(--background);
+	color: var(--default-color-white);
 	background: var(--background);
 	font-family: Arial, Helvetica, sans-serif;
 	-webkit-font-smoothing: antialiased;
