--- a/src/app/components/landpage/header/css/styles.module.css
+++ b/src/app/components/landpage/header/css/styles.module.css
@@ -1,8 +1,10 @@
 .container {
     width: 100%;
     height: auto;
-    background-color: var(--primary);
+    background: transparent;
     position: fixed;
+    backdrop-filter: blur(10px);
+    z-index: 999;
 }
 .wrapper {
     width: var(--max-width);
@@ -30,7 +32,7 @@
     margin: 0 30px;
     width: 120px;
     height: 40px;
-    background-color: var(--background);
+    background-color: var(--primary);
     border: 2px solid var(--background);
     border-radius: 5px;
     font-weight: bold;
