--- a/src/config/conf/config.css
+++ b/src/config/conf/config.css
@@ -1,8 +1,8 @@
 :root {
-	--background: #1CA9C9;
+	--background: linear-gradient(0deg, #cd9b13, #B15913);
 	--foreground: #171717;
-	--primary: #0070F3;
-	--secondary: #1CA9C9;
+	--primary: #D46201;
+	--secondary: #cd9b13;
 	/* Alternative Colors */
 	--default-color-white: #e9e9e9;
 	--default-color-black: #171717;
