--- a/src/config/conf/config.css
+++ b/src/config/conf/config.css
@@ -1,5 +1,5 @@
 :root {
-	--background: linear-gradient(0deg, #cd9b13, #B15913);
+	--background: linear-gradient(0deg, #cd9b13, #017d93);
 	--foreground: #171717;
 	--primary: #D46201;
 	--secondary: #cd9b13;
