--- a/src/app/components/landpage/banner/css/styles.module.css
+++ b/src/app/components/landpage/banner/css/styles.module.css
@@ -18,6 +18,30 @@
     font-size: clamp(1rem, 0.5rem + 1vw, 1.2rem);
     margin: 1rem 2rem;
 }
+.buttons {
+    width: 100%;
+    height: 100%;
+}
+.buttons button {
+    margin: 1rem 2rem;
+    width: 150px;
+    height: 50px;
+    background-color: var(--primary);
+    border: 2px solid var(--background);
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    transform: scale(1.0);
+    transition: transform 500ms ease-out;
+    font-size: 1rem;
+    color: var(--default-color-white);
+}
+.buttons button:hover {
+    transform: scale(1.1);
+}
+.buttons button:active {
+    transform: scale(1.0);
+}
 .right_side {
     width: 50%;
     height: 100%;
