feat: refactor layout components to use a new wrapper class; add wrapper styles and update imports

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,8 @@
 
 @import url("../config/conf/css_config/display_flex.css");
 
+@import url("../config/conf/css_config/wrapper.css");
+
 html,
 body {
 	max-width: 100vw;
