--- a/src/config/conf/css_config/config.css
+++ b/src/config/conf/css_config/config.css
@@ -7,14 +7,23 @@
 	/* Alternative Colors */
 	--default-color-white: #e9e9e9;
 	--default-color-black: #171717;
+	--default-color-blue: #0565B9;
+	--default-color-red: #E94B3C;
+	--default-color-green: #4CAF50;  
+
+	/* Color Modes */
+	--adaptive-color: rgba(233, 233, 233, 0.9);
+	--adaptive-color-2: var(--background_linear_1);
+	--adaptive-color-text: var(--default-color-black);
 
 	/* Global Wrapper Width */
 	--max-width: min(100%, 1200px);
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
 	:root {
-		--background: #0a0a0a;
-		--foreground: #ededed;
+		--adaptive-color: rgba(23, 23, 23, 0.9);
+		--adaptive-color-2: var(--background_linear_2);
+		--adaptive-color-text: var(--default-color-white);
 	}
-} */
+}
