--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@
 
 @import url("../config/conf/css_config/wrapper.css");
 
+@import url("../config/conf/css_config/status.css");
+
 html,
 body {
 	max-width: 100vw;
