--- a/src/config/conf/css_config/background_colors.css
+++ b/src/config/conf/css_config/background_colors.css
@@ -3,6 +3,6 @@
 	background: linear-gradient(0deg, var(--background_linear_2), var(--background_linear_1));
 }
 
-.signup_page {
+.auth_page {
     background: linear-gradient(0deg, var(--adaptive-color-2), var(--default-color-black));
 }
