--- a/src/config/conf/css_config/background_colors.css
+++ b/src/config/conf/css_config/background_colors.css
@@ -6,3 +6,8 @@
 .auth_page {
     background: linear-gradient(0deg, var(--adaptive-color-2), var(--default-color-black));
 }
+
+.chat_page {
+    background: var(--adaptive-color-3);
+    overflow: hidden;
+}
