--- a/src/components/auth/update_password/css/styles.module.css
+++ b/src/components/auth/update_password/css/styles.module.css
@@ -2,6 +2,10 @@
     width: 100%;
     height: 100vh;
 }
+.wrapper {
+    width: var(--max-width);
+    margin: 10px auto;
+}
 .form_styles {
     width: min(600px, 90dvw);
     height: clamp(200px, 80vh, 480px);
