--- a/src/components/landpage/banner/css/styles.module.css
+++ b/src/components/landpage/banner/css/styles.module.css
@@ -2,7 +2,10 @@
     width: 100%;
     height: 100vh;
 }
-
+.wrapper {
+    width: var(--max-width);
+    margin: 10px auto;
+}
 .center {
     width: 80%;
     height: 100%;
