--- a/src/config/conf/css_config/config.css
+++ b/src/config/conf/css_config/config.css
@@ -1,12 +1,12 @@
 :root {
 	--background_linear_1: #017d93;
 	--background_linear_2: #dfac1f;
-	--foreground: #171717;
+	--foreground: #181818;
 	--primary: #D46201;
 	--secondary: #cd9b13;
 	/* Alternative Colors */
 	--default-color-white: #e9e9e9;
-	--default-color-black: #171717;
+	--default-color-black: #212121;
 	--default-color-blue: #0565B9;
 	--default-color-red: #E94B3C;
 	--default-color-green: #4CAF50;  
@@ -14,6 +14,8 @@
 	/* Color Modes */
 	--adaptive-color: rgba(233, 233, 233, 0.9);
 	--adaptive-color-2: var(--background_linear_1);
+	--adaptive-color-3: var(--default-color-white);
+	--adaptive-color-4: var(--default-color-white);
 	--adaptive-color-text: var(--default-color-black);
 
 	/* Global Wrapper Width */
@@ -24,6 +26,8 @@
 	:root {
 		--adaptive-color: rgba(23, 23, 23, 0.9);
 		--adaptive-color-2: var(--background_linear_2);
+		--adaptive-color-3: var(--default-color-black);
+		--adaptive-color-4: var(--foreground);
 		--adaptive-color-text: var(--default-color-white);
 	}
 }
