--- a/src/components/chat_bot/sidebars/css/styles.module.css
+++ b/src/components/chat_bot/sidebars/css/styles.module.css
@@ -5,9 +5,9 @@
     border: 1px solid var(--adaptive-color-2);
     position: fixed;
     z-index: 1;
-    transform: translateX(-100%);
+    transform: translateX(-120%);
     opacity: 0;
-    transition: all 1s ease;
+    transition: all 800ms ease;
 }
 .open {
     transform: translateX(0);
