--- a/src/components/auth/confirm_email_signup/css/styles.module.css
+++ b/src/components/auth/confirm_email_signup/css/styles.module.css
@@ -10,7 +10,7 @@
     width: min(600px, 90dvw);
     height: clamp(200px, 80vh, 450px);
     border-radius: 10px;
-    background: var(--adaptive-color);
+    background: var(--fx-color);
     padding: clamp(1rem, 10dvw, 3rem);
     position: relative;
     overflow: hidden;
@@ -23,7 +23,8 @@
     padding: 5px 0;
     background: transparent;
     border: transparent;
-    border-bottom: 2px solid var(--adaptive-color-text);
+    border-bottom: 2px solid var(--primary);
+    color: var(--default-color-black);
     outline: none;
     text-align: center;
 }
@@ -60,7 +61,7 @@
 .buttons button {
     padding: 10px clamp(30px, 3vw, 50px);
     margin: 0 0 0 10px;
-    background: var(--background_linear_1);
+    background: var(--primary);
     border-radius: 5px;
     border: transparent;
     font-size: 1rem;
