--- a/src/config/conf/css_config/config.css
+++ b/src/config/conf/css_config/config.css
@@ -2,7 +2,7 @@
 	--background_linear_1: #017d93;
 	--background_linear_2: #dfac1f;
 	--foreground: #181818;
-	--primary: #D46201;
+	--primary: #1A54B8;
 	--secondary: #cd9b13;
 	/* Alternative Colors */
 	--default-color-white: #e9e9e9;
@@ -11,20 +11,20 @@
 	--default-color-blue: #0565B9;
 	--default-color-red: #E94B3C;
 	--default-color-green: #4CAF50;  
+	--fx-color: rgba(233, 233, 233, 0.9);
 
 	/* Color Modes */
-	--adaptive-color: rgba(233, 233, 233, 0.9);
-	--adaptive-color-2: var(--background_linear_1);
+	/* --adaptive-color-2: var(--background_linear_1);
 	--adaptive-color-2-reverse: var(--background_linear_2);
 	--adaptive-color-3: var(--default-color-white);
 	--adaptive-color-4: var(--default-color-white-2);
-	--adaptive-color-text: var(--default-color-black);
+	--adaptive-color-text: var(--default-color-black); */
 
 	/* Global Wrapper Width */
 	--max-width: min(100%, 1200px);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
 	:root {
 		--adaptive-color: rgba(23, 23, 23, 0.9);
 		--adaptive-color-2: var(--background_linear_2);
@@ -33,4 +33,4 @@
 		--adaptive-color-4: var(--foreground);
 		--adaptive-color-text: var(--default-color-white);
 	}
-}
+} */
