--- a/src/components/auth/confirm_email_signin/css/styles.module.css
+++ b/src/components/auth/confirm_email_signin/css/styles.module.css
@@ -24,7 +24,7 @@
     background: transparent;
     border: transparent;
     border-bottom: 2px solid var(--primary);
-    color: var(--default-color-black);
+    color: var(--foreground);
     outline: none;
     text-align: center;
 }
