--- a/src/components/chat_bot/header/css/styles.module.css
+++ b/src/components/chat_bot/header/css/styles.module.css
@@ -1,8 +1,14 @@
 .container {
     width: 100%;
-    height: 55px;
-    padding: 0.8rem;
+    height: auto;
+    padding: 0.4rem;
     position: fixed;
     background: var(--primary);
+    z-index: 999;
     top: 0;
+    justify-content: space-between;
+}
+.container h1 {
+    margin: 0 3rem;
+    font-size: clamp(1rem, 0.5rem + 1vw, 2rem);
 }
