--- a/src/components/chat_bot/sidebars/css/styles.module.css
+++ b/src/components/chat_bot/sidebars/css/styles.module.css
@@ -16,12 +16,6 @@
     height: 100%;
     margin: 10px auto;
     flex-flow: column;
-    justify-content: flex-start;
-}
-.logo {
-    width: 100%;
-    height: auto;
-    padding: 0.3rem 0.7rem;
 }
 .options {
     width: 100%;
@@ -31,13 +25,14 @@
     margin: 1rem 0;
 }
 .options button {
-    padding: 0.5rem 9rem 0.5rem 1rem;
+    padding: 0.5rem 8rem 0.5rem 1rem;
     cursor: pointer;
     background: transparent;
     border: transparent;
     border-radius: 5px;
     text-align: left;
     font-size: 0.9rem;
+    margin: 5rem 0 0 0;
     transition: all 200ms ease;
 }
 .options button:hover {
@@ -46,21 +41,45 @@
 }
 .chat_history {
     width: 100%;
-    height: 90%;
-    padding: 0.5rem 0.8rem;
+    height: 700px;
+    padding: 0.5rem 0.1rem;
+    flex-flow: column;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 .chat_history select {
     background: transparent;
     border: transparent;
     outline: none;
     cursor: pointer;
+    margin: 1rem 0;
     color: var(--adaptive-color-text);
     font-weight: 900;
+}
+.chat_history button {
+    width: 230px;
+    padding: 0.5rem 2rem 0.5rem 1rem;
+    cursor: pointer;
+    background: transparent;
+    border: transparent;
+    border-radius: 5px;
+    text-align: left;
+    margin: 0.2rem 0;
+    font-size: 0.9rem;
+    transition: all 200ms ease;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+.chat_history button:hover {
+    background: var(--default-color-white);
+    color: var(--foreground);
 }
 .user_info {
     width: 100%;
     height: 15%;
     padding: 0 0.5rem;
+    margin: 0 0 1rem 0;
 }
 .user_info figure {
     cursor: pointer;
@@ -122,4 +141,23 @@
 .user_info_menu button:hover {
     background: var(--default-color-white);
     color: var(--foreground);
+}
+.user_info_menu span {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-weight: bolder;
+    cursor: pointer;
+}
+@media (max-width: 1200px) {
+    .container {
+        position: fixed;
+        left: 0;
+        width: 0;
+    }
+    .open {
+        width: 250px;
+        opacity: 1;
+        overflow: visible;
+    }
 }
