--- a/src/config/conf/css_config/background_colors.css
+++ b/src/config/conf/css_config/background_colors.css
@@ -14,4 +14,5 @@
 
 .admin {
     background: linear-gradient(90deg, var(--adaptive-color-1), var(--adaptive-color-3)); 
+    width: max(1500px, 100%);
 }
