--- a/src/components/auth/forgot_password/css/styles.module.css
+++ b/src/components/auth/forgot_password/css/styles.module.css
@@ -10,6 +10,19 @@
     padding: clamp(1rem, 10dvw, 3rem);
     position: relative;
     overflow: hidden;
+    opacity: 0;
+    transform: translateY(50px);
+    animation: fade_in 500ms forwards ease;
+}
+@keyframes fade_in {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 .wrapper {
     width: var(--max-width);
