--- a/src/components/landpage/banner/css/styles.module.css
+++ b/src/components/landpage/banner/css/styles.module.css
@@ -1,6 +1,7 @@
 .container {
     width: 100%;
     height: 100vh;
+    overflow: hidden;
 }
 .wrapper {
     width: var(--max-width);
@@ -13,13 +14,65 @@
     text-align: center;
 }
 .center h1 {
-    font-size: clamp(2rem, 1rem + 3vw, 4rem);
+    flex-wrap: wrap;
+    gap: 10px;
+    font-size: clamp(2.2rem, 1rem + 3vw, 4rem);
     margin: 0 1rem;
+    opacity: var(--fade-in);
+    transition: 0.8s ease-out;
 }
+.center h1 span {
+    opacity: 0;
+    transform: translateY(60px);
+    display: inline-block;
+    transition: all 0.8s ease;
+}
+.center h1[style*='--fade-in: 1'] span {
+    opacity: 1;
+    transform: translateY(0);
+}
+.center h1 span:nth-child(1) { transition-delay: 0s; }
+.center h1 span:nth-child(2) { transition-delay: 0.1s; }
+.center h1 span:nth-child(3) { transition-delay: 0.2s; }
+.center h1 span:nth-child(4) { transition-delay: 0.3s; }
+
 .center p {
-    font-size: clamp(1rem, 0.5rem + 1vw, 1.2rem);
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 5px;
+    font-size: clamp(0.8rem, 0.5rem + 1vw, 1.2rem);
     margin: 1rem 0;
+    margin: 0 1rem;
+    opacity: var(--fade-in);
+    transition: 0.8s ease-out;
 }
+.center p span {
+    opacity: 0;
+    transform: translateY(40px);
+    display: inline-block;
+    transition: all 0.8s ease;
+}
+.center p[style*='--fade-in-p: 1'] span {
+    opacity: 1;
+    transform: translateY(0);
+}
+.center p span:nth-child(1) { transition-delay: 0s; }
+.center p span:nth-child(2) { transition-delay: 0.1s; }
+.center p span:nth-child(3) { transition-delay: 0.2s; }
+.center p span:nth-child(4) { transition-delay: 0.3s; }
+.center p span:nth-child(5) { transition-delay: 0.4s; }
+.center p span:nth-child(6) { transition-delay: 0.5s; }
+.center p span:nth-child(7) { transition-delay: 0.6s; }
+.center p span:nth-child(8) { transition-delay: 0.7s; }
+.center p span:nth-child(9) { transition-delay: 0.8s; }
+.center p span:nth-child(10) { transition-delay: 0.9s; }
+.center p span:nth-child(11) { transition-delay: 1.0s; }
+.center p span:nth-child(12) { transition-delay: 1.1s; }
+.center p span:nth-child(13) { transition-delay: 1.2s; }
+.center p span:nth-child(14) { transition-delay: 1.3s; }
+.center p span:nth-child(15) { transition-delay: 1.4s; }
+
+
 .buttons {
     width: 100%;
     height: 100%;
@@ -34,14 +87,8 @@
     font-weight: bold;
     cursor: pointer;
     transform: scale(1.0);
-    opacity: 1;
-    transition: all 500ms ease-out;
+    opacity: var(--spand-in);
+    transition: all 500ms 2s ease-out;
     font-size: 1rem;
     color: var(--default-color-white);
-}
-.buttons button:hover {
-    opacity: 0.8;
-}
-.buttons button:active {
-    transform: scale(1.0);
 }
