--- a/src/components/admin/manage_user/css/styles.module.css
+++ b/src/components/admin/manage_user/css/styles.module.css
@@ -9,15 +9,23 @@
 .tables {
     width: 100%;
     height: auto;
-    background-color: var(--default-color-black);
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 2px 1px var(--default-color-black);
+    border-collapse: collapse;
+    margin: 20px 0 0 0;
 }
 .tables th {
-    background-color: var(--primary);
+    padding: 1rem;
+    border-bottom: 1px solid var(--default-color-black);
+    background: var(--primary);
+    color: var(--default-color-white);
 }
 .tables td {
     padding: 1rem;
     color: var(--default-color-black);
     background-color: var(--default-color-white);
+    text-align: center;
 }
 .tables select {
     width: 130px;
@@ -31,10 +39,12 @@
     font-size: 15px;
     text-align: center;
 }
-
+.search {
+    padding: 2rem;   
+}
 .search input {
     padding: 0.5rem 1rem;
-    margin: 10px 0;
+    margin: 0;
     background: transparent;
     outline: none;
     color: var(--default-color-black);
