--- a/src/components/admin/sidebar/css/styles.module.css
+++ b/src/components/admin/sidebar/css/styles.module.css
@@ -1,6 +1,6 @@
 .container {
     width: 260px;
-    height: 100vh;
+    height: 100dvh;
     background-color: var(--primary);
     flex-flow: column;
 }
