--- a/src/components/landpage/header/css/styles.module.css
+++ b/src/components/landpage/header/css/styles.module.css
@@ -10,7 +10,7 @@
     width: 50%;
     height: 100%;
     overflow-x: auto;
-    padding: 0 1rem;
+    padding: 0.5rem 0;
 }
 .image1 {
     margin: 0 0 0 30px;
