--- a/src/components/auth/signup/css/styles.module.css
+++ b/src/components/auth/signup/css/styles.module.css
@@ -52,6 +52,7 @@
     background: var(--primary);
     cursor: pointer;
     padding: 0.5rem;
+    margin: 0 0.5rem;
     outline: none;
     border: transparent;
 }
