feat: update cooldown duration for email verification and enhance UI for under development page

--- a/src/config/conf/css_config/config.css
+++ b/src/config/conf/css_config/config.css
@@ -1,9 +1,9 @@
 :root {
 	--background_linear_1: #017d93;
-	--background_linear_2: #dfac1f;
+	--background_linear_2: #3fa5b7;
 	--foreground: #181818;
 	--primary: #1A54B8;
-	--secondary: #cd9b13;
+	--secondary: #3fa5b7;
 	/* Alternative Colors */
 	--default-color-white: #e9e9e9;
 	--default-color-white-2: #d7d7d7;
